# CLibSFPluginTemplate

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  EXCEPTIONS  README.md  project_setup.py  vcpkg.json
.github/workflows/: clang-format.yml  format.yml  prettier.yml  testbuild.yml
cmake/: Plugin.h.in  version.rc.in
contrib/Config/: PluginName.ini
include/: Hooks.h  Logging.h  PCH.h  Plugin.h  Settings.h  Utility.h
src/: Hooks.cpp  Logging.cpp  Main.cpp  Settings.cpp
